better data downloader folder, and emojis

--- a/downloaders/download_comcrawl.ipynb
+++ b/downloaders/download_comcrawl.ipynb
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "# To save as a csv, use the line below\n",
-    "# pd.DataFrame(client.results).to_csv(\"results.csv\")\n",
+    "# pd.DataFrame(client.results).to_csv(\"../data/results.csv\")\n",
     "\n",
     "df = pd.DataFrame(client.results)"
    ]
