--- a/downloaders/web_scraping_basic.ipynb
+++ b/downloaders/web_scraping_basic.ipynb
@@ -189,7 +189,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save the dataset :)\n",
+    "training_df.to_csv(\"../data/scraping_results.csv\")"
+   ]
   }
  ],
  "metadata": {
