pip install notes

--- a/downloaders/download_comcrawl.ipynb
+++ b/downloaders/download_comcrawl.ipynb
@@ -40,6 +40,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Important Notice!\n",
+    "\n",
+    "If you ran ```!pip install ...```above you need to only run that cell once!\n",
+    "after you run that cell you need to restart the kernel by going \"Kernel > Restart\" above or by pressing ```0```,```0```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
