--- a/example.ipynb
+++ b/example.ipynb
@@ -1,19 +1,50 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "071918e7-d672-456c-bc25-0958e499f836",
+   "cell_type": "markdown",
+   "id": "50936be5-969f-41cd-b9f4-1ea636642009",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from skllm import MultiLabelZeroShotGPTClassifier\n",
-    "import pandas as pd"
+    "# Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "071918e7-d672-456c-bc25-0958e499f836",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "from pprint import pprint\n",
+    "\n",
+    "from skllm import MultiLabelZeroShotGPTClassifier\n",
+    "from skllm.config import SKLLMConfig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00c27fb1-a5f1-428c-95f0-14c1b62abf53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SKLLMConfig.set_openai_key(os.environ.get('OPENAI_API_KEY'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5129b91-8cbc-4359-bf2a-dc8d5e00f6ed",
+   "metadata": {},
+   "source": [
+    "# Collect a Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ee817bca-c736-474b-be1f-c9034e7780f9",
    "metadata": {},
    "outputs": [],
@@ -23,313 +54,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "923dc7af-b409-44b7-a1f1-cae37154cf81",
+   "metadata": {},
+   "source": [
+    "# Understand Your Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bae5d63e-1a2b-4173-8831-330451b7c5c5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>author</th>\n",
-       "      <th>isOver18</th>\n",
-       "      <th>postUrl</th>\n",
-       "      <th>subreddit</th>\n",
-       "      <th>postTitle</th>\n",
-       "      <th>hasPostBody</th>\n",
-       "      <th>postBody</th>\n",
-       "      <th>score</th>\n",
-       "      <th>numComments</th>\n",
-       "      <th>Unnamed: 10</th>\n",
-       "      <th>Unnamed: 11</th>\n",
-       "      <th>Unnamed: 12</th>\n",
-       "      <th>Unnamed: 13</th>\n",
-       "      <th>Unnamed: 14</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>f6jt5e</td>\n",
-       "      <td>w2555</td>\n",
-       "      <td>False</td>\n",
-       "      <td>https://reddit.com/r/LifeProTips/comments/f6jt5e/</td>\n",
-       "      <td>LifeProTips</td>\n",
-       "      <td>LPT: keep your mouth shut, and don't volunteer...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>I had a phone interview scheduled this morning...</td>\n",
-       "      <td>147296.0</td>\n",
-       "      <td>4730.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>lq1jn7</td>\n",
-       "      <td>this1tyme</td>\n",
-       "      <td>False</td>\n",
-       "      <td>https://reddit.com/r/LifeProTips/comments/lq1jn7/</td>\n",
-       "      <td>LifeProTips</td>\n",
-       "      <td>LPT: Texans, you are about to experience the w...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>134320.0</td>\n",
-       "      <td>4121.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>j2mm1b</td>\n",
-       "      <td>raviji22</td>\n",
-       "      <td>False</td>\n",
-       "      <td>https://reddit.com/r/LifeProTips/comments/j2mm1b/</td>\n",
-       "      <td>LifeProTips</td>\n",
-       "      <td>LPT: When you sign up for anything online, put...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>129513.0</td>\n",
-       "      <td>1971.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>fqkkke</td>\n",
-       "      <td>[deleted]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>https://reddit.com/r/LifeProTips/comments/fqkkke/</td>\n",
-       "      <td>LifeProTips</td>\n",
-       "      <td>LPT: First rule of family gatherings, always b...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>[deleted]</td>\n",
-       "      <td>124219.0</td>\n",
-       "      <td>2762.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>gmmiah</td>\n",
-       "      <td>AlphaSyncz</td>\n",
-       "      <td>False</td>\n",
-       "      <td>https://reddit.com/r/YouShouldKnow/comments/gm...</td>\n",
-       "      <td>YouShouldKnow</td>\n",
-       "      <td>YSK That there is a Youtuber called \"Dad, how ...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>It's just basic stuff but I know friends of mi...</td>\n",
-       "      <td>120038.0</td>\n",
-       "      <td>1532.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id      author isOver18  \\\n",
-       "0  f6jt5e       w2555    False   \n",
-       "1  lq1jn7   this1tyme    False   \n",
-       "2  j2mm1b    raviji22    False   \n",
-       "3  fqkkke   [deleted]    False   \n",
-       "4  gmmiah  AlphaSyncz    False   \n",
-       "\n",
-       "                                             postUrl      subreddit  \\\n",
-       "0  https://reddit.com/r/LifeProTips/comments/f6jt5e/    LifeProTips   \n",
-       "1  https://reddit.com/r/LifeProTips/comments/lq1jn7/    LifeProTips   \n",
-       "2  https://reddit.com/r/LifeProTips/comments/j2mm1b/    LifeProTips   \n",
-       "3  https://reddit.com/r/LifeProTips/comments/fqkkke/    LifeProTips   \n",
-       "4  https://reddit.com/r/YouShouldKnow/comments/gm...  YouShouldKnow   \n",
-       "\n",
-       "                                           postTitle hasPostBody  \\\n",
-       "0  LPT: keep your mouth shut, and don't volunteer...        True   \n",
-       "1  LPT: Texans, you are about to experience the w...       False   \n",
-       "2  LPT: When you sign up for anything online, put...       False   \n",
-       "3  LPT: First rule of family gatherings, always b...        True   \n",
-       "4  YSK That there is a Youtuber called \"Dad, how ...        True   \n",
-       "\n",
-       "                                            postBody     score  numComments  \\\n",
-       "0  I had a phone interview scheduled this morning...  147296.0       4730.0   \n",
-       "1                                                NaN  134320.0       4121.0   \n",
-       "2                                                NaN  129513.0       1971.0   \n",
-       "3                                          [deleted]  124219.0       2762.0   \n",
-       "4  It's just basic stuff but I know friends of mi...  120038.0       1532.0   \n",
-       "\n",
-       "  Unnamed: 10 Unnamed: 11 Unnamed: 12  Unnamed: 13  Unnamed: 14  \n",
-       "0         NaN         NaN         NaN          NaN          NaN  \n",
-       "1         NaN         NaN         NaN          NaN          NaN  \n",
-       "2         NaN         NaN         NaN          NaN          NaN  \n",
-       "3         NaN         NaN         NaN          NaN          NaN  \n",
-       "4         NaN         NaN         NaN          NaN          NaN  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6bea9e4e-af8a-40ee-9a12-5b9dc3d73fc0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>score</th>\n",
-       "      <th>numComments</th>\n",
-       "      <th>Unnamed: 13</th>\n",
-       "      <th>Unnamed: 14</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>4.00000</td>\n",
-       "      <td>2.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>125228.444444</td>\n",
-       "      <td>2604.222222</td>\n",
-       "      <td>937.75000</td>\n",
-       "      <td>80.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>10248.934592</td>\n",
-       "      <td>1217.272954</td>\n",
-       "      <td>771.05831</td>\n",
-       "      <td>55.154329</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>115511.000000</td>\n",
-       "      <td>964.000000</td>\n",
-       "      <td>272.00000</td>\n",
-       "      <td>41.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>118582.000000</td>\n",
-       "      <td>1792.000000</td>\n",
-       "      <td>314.00000</td>\n",
-       "      <td>60.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>120038.000000</td>\n",
-       "      <td>2633.000000</td>\n",
-       "      <td>812.50000</td>\n",
-       "      <td>80.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>129513.000000</td>\n",
-       "      <td>2933.000000</td>\n",
-       "      <td>1436.25000</td>\n",
-       "      <td>99.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>147296.000000</td>\n",
-       "      <td>4730.000000</td>\n",
-       "      <td>1854.00000</td>\n",
-       "      <td>119.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               score  numComments  Unnamed: 13  Unnamed: 14\n",
-       "count       9.000000     9.000000      4.00000     2.000000\n",
-       "mean   125228.444444  2604.222222    937.75000    80.000000\n",
-       "std     10248.934592  1217.272954    771.05831    55.154329\n",
-       "min    115511.000000   964.000000    272.00000    41.000000\n",
-       "25%    118582.000000  1792.000000    314.00000    60.500000\n",
-       "50%    120038.000000  2633.000000    812.50000    80.000000\n",
-       "75%    129513.000000  2933.000000   1436.25000    99.500000\n",
-       "max    147296.000000  4730.000000   1854.00000   119.000000"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "218e1acd-a5cf-4caf-98ee-aef5d5b60479",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = data['postBody']"
+    "X = data['postTitle']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aa94aca-fb96-4217-9a8e-456bb8ea7a91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e6f108b-5bc1-4ec3-992d-7c14c3512e0d",
+   "metadata": {},
+   "source": [
+    "# \"Develop\" a Model aka just use OpenAI's API"
    ]
   },
   {
@@ -341,13 +118,13 @@
    "source": [
     "# Define candidate labels\n",
     "candidate_labels = [\n",
-    "    \"High Importance\",\n",
-    "    \"Medium Importance\",\n",
-    "    \"Low Importance\",\n",
+    "    \"Work\",\n",
+    "    \"Family\",\n",
+    "    \"Other\"\n",
     "]\n",
     "\n",
     "# Create and fit the classifier\n",
-    "clf = MultiLabelZeroShotGPTClassifier(max_labels=1)  # Set max_labels to 1 as each tip has a single level of importance\n",
+    "clf = MultiLabelZeroShotGPTClassifier(max_labels=2) \n",
     "clf.fit(None, [candidate_labels])"
    ]
   },
@@ -370,8 +147,60 @@
    "outputs": [],
    "source": [
     "# Add labels to the dataset and save\n",
-    "data['Importance'] = labels\n",
-    "data.to_csv('classified_tips.csv', index=False)"
+    "data['Category'] = labels\n",
+    "data.to_csv('data/classified_tips.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "782d5e63-3e5e-4b4f-9d73-a3d43401169b",
+   "metadata": {},
+   "source": [
+    "# Choose an evaluation protocol / evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "124a5050-aeca-4690-990d-affb41c2c43c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[[\"postTitle\",\"Category\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca425840-efdb-40fc-9fa8-d759d2d9cc48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb11065f-15a7-4532-bf3e-cec70bc1ee5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d7dd10a-5fc6-4359-b23a-563fa0b33f9b",
+   "metadata": {},
+   "source": [
+    "# Skipped Steps\n",
+    "* Choose a measure of success\n",
+    "* Beat a baseline\n",
+    "* Overfit, regularize and tune\n",
+    "* Communicate with stakeholders\n",
+    "* Ship an inference model\n",
+    "* Monitor and maintain"
    ]
   }
  ],
