--- a/example.ipynb
+++ b/example.ipynb
@@ -20,6 +20,8 @@
     "\n",
     "from pprint import pprint\n",
     "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "from skllm import MultiLabelZeroShotGPTClassifier\n",
     "from skllm.config import SKLLMConfig"
    ]
@@ -31,6 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#See notes in INSTALL.md for how to set this, DO NOT HARD CODE YOUR API KEY HERE, \n",
+    "# if your repository is public, then someone will steal your API key and make you pay for their shit \n",
     "SKLLMConfig.set_openai_key(os.environ.get('OPENAI_API_KEY'))"
    ]
   },
@@ -147,7 +151,7 @@
    "outputs": [],
    "source": [
     "# Add labels to the dataset and save\n",
-    "data['Category'] = labels\n",
+    "data['ChatGPTLabel'] = labels\n",
     "data.to_csv('data/classified_tips.csv', index=False)"
    ]
   },
@@ -156,7 +160,19 @@
    "id": "782d5e63-3e5e-4b4f-9d73-a3d43401169b",
    "metadata": {},
    "source": [
-    "# Choose an evaluation protocol / evaluate"
+    "# Choose a measure of success, Choose an evaluation protocol / evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20ace555-e39f-47af-9818-7552ccfdbf53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove some schmutz from the labels, don't worry about what this does for now\n",
+    "data['HumanLabel'] = data['HumanLabel'].str.extract(r\"\\['(.*?)'\\]\")\n",
+    "data['ChatGPTLabel'] = data['ChatGPTLabel'].apply(lambda x: x[0] if x else None)"
    ]
   },
   {
@@ -166,27 +182,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[[\"postTitle\",\"Category\"]]"
+    "data[[\"postTitle\",\"ChatGPTLabel\",\"HumanLabel\"]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca425840-efdb-40fc-9fa8-d759d2d9cc48",
+   "id": "87f4c4d6-c197-4666-8de8-dda3b376ec85",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb11065f-15a7-4532-bf3e-cec70bc1ee5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels[0]"
+    "accuracy = accuracy_score(data[[\"HumanLabel\"]], data[[\"ChatGPTLabel\"]])\n",
+    "print(accuracy)"
    ]
   },
   {
@@ -195,7 +202,6 @@
    "metadata": {},
    "source": [
     "# Skipped Steps\n",
-    "* Choose a measure of success\n",
     "* Beat a baseline\n",
     "* Overfit, regularize and tune\n",
     "* Communicate with stakeholders\n",
