fixed doc location

--- a/examples/scikitllm_docx_example.ipynb
+++ b/examples/scikitllm_docx_example.ipynb
@@ -184,7 +184,7 @@
    "source": [
     "# Add labels to the dataset and save\n",
     "data['ChatGPTLabel'] = labels\n",
-    "data.to_csv('data/classified_tips.csv', index=False)"
+    "data.to_csv('../data/classified_tips.csv', index=False)"
    ]
   },
   {
